Make the query box fixed height and stuck to the top.

--- a/_sass/library.scss
+++ b/_sass/library.scss
@@ -14,14 +14,6 @@ h3 {
   font-weight: normal;
 }
 
-.library {
-  padding: 8px;
-  width: 100%;
-  max-width: 800px;
-  margin: 0 auto;
-  font-size: 11pt;
-}
-
 .tooltip {
   width: 100%;
   margin: 0;
@@ -85,13 +77,6 @@ h3 {
   p {
     margin: 32px 0;
   }
-}
-
-.query-container {
-  padding: 8px;
-  box-shadow: 0px 1px 2px 0px rgba(0,0,0,0.2);
-  background: white;
-  border-radius: 2px;
 }
 
 #query {
